fixed spacing

--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -4,15 +4,16 @@
   font-size: 20px;
   color: #EDE4F1;
 }
+
 .profileIcon {
-  width: 10vh; /* or any square size */
+  width: 10vh;
   height: 10vh;
   object-fit: cover;
   object-position: center;
-  border-radius: 50%; /* rounds the square into a circle */
-  overflow: hidden;
+  border-radius: 50%;
   border: 5px solid #EDE4F1;
 }
+
 .navContainer {
-    background-color: #171123;
+  background-color: #171123;
 }
